Improve image lightbox and static image grids

--- a/astro/src/layouts/BaseLayout.astro
+++ b/astro/src/layouts/BaseLayout.astro
@@ -99,6 +99,7 @@ const mainPadding = isHome ? "" : "pt-2";
     </main>
     <Footer />
     <script src="/scripts/accordion.js" defer is:inline></script>
+    <script src="/scripts/static-image-lightbox.js" defer></script>
     <script is:inline>
       if ("serviceWorker" in navigator) {
         navigator.serviceWorker.getRegistrations().then((registrations) => {
